# testcontainers-sample

./: Pipfile  README.md  pyproject.toml
.github/workflows/: tests-and-cheks.yml
deployment/sql/: alembic.ini
deployment/sql/alembic/: env.py
deployment/sql/alembic/versions/: dfda689d9786_database_initialization.py
review_app/: models.py
review_app/database/: database.py  service.py
src/review_app/: main.py  models.py
src/review_app/database/: database.py  models.py  service.py
test/: test_main.py
test/database/: conftest.py  initializer_helper.py  test_service.py
